[package]
name = "rpow-miner"
version = "0.1.0"
edition = "2021"
description = "Multithreaded RPOW miner (https://rpow2.com)"
license = "MIT"
publish = false

[[bin]]
name = "rpow-miner"
path = "src/main.rs"

[dependencies]
anyhow = "1"
hex = "0.4"
num_cpus = "1.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["asm"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"] }
hyper = { version = "1", features = ["server", "http1"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
